@@ -139,11 +139,11 @@ public class UsersManagerEntry implements UsersManager {
     Utils.notNull(user, "user");
     Utils.notNull(userExtSource.getExtSource(), "ExtSource in UserExtSource");
     Utils.notNull(userExtSource.getLogin(), "Login in UserExtSource");
-    Utils.notNull(userExtSource.getExtSource().getType(), "Type of ExpSource in UserExtSource");
+    Utils.notNull(userExtSource.getExtSource().getType(), "Type of ExtSource in UserExtSource");
 
     // Authorization
     if (!AuthzResolver.authorizedInternal(sess, "addUserExtSource_User_UserExtSource_policy",
-        Arrays.asList(user, userExtSource))) {
+        List.of(user))) {
       throw new PrivilegeException(sess, "addUserExtSource");
     }
 
